syntax = "proto3";

import "google/protobuf/timestamp.proto";

package book;

service BookService {
  rpc CreateBook (CreateBookRequest) returns (Book);
  rpc GetBook (GetBookRequest) returns (Book);
  rpc UpdateBook (UpdateBookRequest) returns (Book);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
  rpc ListBooks (ListBooksRequest) returns (ListBooksResponse);
  rpc GetBooksByAuthor (GetBooksByAuthorRequest) returns (ListBooksResponse);
}

message Book {
  string id = 1;
  string title = 2;
  string authorId = 3;
  int32 publishedYear = 4;
  google.protobuf.Timestamp createdAt = 5;  
}

message CreateBookRequest {
  string title = 1;
  string authorId = 2;
  int32 publishedYear = 3;
}

message GetBookRequest {
  string id = 1;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string authorId = 3;
  int32 publishedYear = 4;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
  bool success = 1;
}

message ListBooksRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListBooksResponse {
  repeated Book books = 1;
  int32 total = 2;
}

message GetBooksByAuthorRequest {
  string authorId = 1;
}
